--- a/Cherry Blossom Festivals.html
+++ b/Cherry Blossom Festivals.html
@@ -53,7 +53,7 @@
               <div class="mega-box">
                 <div class="content">
                   <div class="row">
-                    <img src="map.jfif" alt="">
+                    <img src="images\map.jfif" alt="">
                   </div>
                   <div class="row">
                     <header>Cultural events </header>
