Update lifestyle in Tokyo.html

--- a/lifestyle in Tokyo.html
+++ b/lifestyle in Tokyo.html
@@ -53,7 +53,7 @@
             <div class="mega-box">
               <div class="content">
                 <div class="row">
-                  <img src="map.jfif" alt="">
+                  <img src="images/map.jfif" alt="">
                 </div>
                 <div class="row">
                   <header>Cultural events </header>
@@ -108,7 +108,7 @@
   </nav>
   <section class="header">
     <video autoplay loop class="video-background" muted plays-inline>
-      <source src="Background.mp4" type="video/mp4">
+      <source src="videos/Background.mp4" type="video/mp4">
     </video>
   </section>
   
@@ -120,7 +120,7 @@
    <br><br><p>Japan’s population is over 126m, 75% of whom live in urban areas like Tokyo, Yokohama, Kawasaki, Osaka and Nagoya. With such densely populated cities, space is precious and land prices extremely high. </p><br><br><h1>DO NOT TALK LOUDLY OR MAKE CALLS ON TRAINS</h1><br><br><p>
     We all have those moments when we’re very excited and feel the need to broadcast this to the world. A crowded train in Tokyo, however, is not the place to do so. Both talking on the phone and loud conversations on trains are rather frowned upon in this city where commuters like to be able to travel in peace. 
     If you get a phone call, either decline the call and buzz them back once you’re off the train, or pick up and quickly, quietly, let them know you can’t talk at the moment. The only exception to this rule is the last train home on weekends, when the average rider is so sloshed that all inhibitions are lost and almost anything goes. 
-    </p><img src="17.jpg" class="img"><br><br><h1>DO NOT EAT ON THE GO</h1><br><br><p>The amount of plastic used to encase takeaway meals should be enough of a hint: in general, food in Japan is not to be eaten while trying to get from A to B, unless you have a proper table to place it on. There is a sliding scale, though: the more pungent the food and the more crowded the place, the bigger the offense. Quick onigiri on a non-crowded train or while speed-walking? Perhaps. A pack of natto or a big slice of pizza during rush hour? Don’t even think about it.  </p><br><br><img src="street.jpg" class="imgs">
+    </p><img src="images/17.jpg" class="img"><br><br><h1>DO NOT EAT ON THE GO</h1><br><br><p>The amount of plastic used to encase takeaway meals should be enough of a hint: in general, food in Japan is not to be eaten while trying to get from A to B, unless you have a proper table to place it on. There is a sliding scale, though: the more pungent the food and the more crowded the place, the bigger the offense. Quick onigiri on a non-crowded train or while speed-walking? Perhaps. A pack of natto or a big slice of pizza during rush hour? Don’t even think about it.  </p><br><br><img src="images/street.jpg" class="imgs">
     </div>
     
 
