--- a/History.html
+++ b/History.html
@@ -53,7 +53,7 @@
             <div class="mega-box">
               <div class="content">
                 <div class="row">
-                  <img src="map.jfif" alt="">
+                  <img src="images/map.jfif" alt="">
                 </div>
                 <div class="row">
                   <header>Cultural events </header>
@@ -110,7 +110,7 @@
   
   <section class="header">
     <video autoplay loop class="video-background" muted plays-inline>
-      <source src="Background.mp4" type="video/mp4">
+      <source src="videos/Background.mp4" type="video/mp4">
     </video>
   </section>
 
