--- a/Firework Events.html
+++ b/Firework Events.html
@@ -41,7 +41,7 @@
             <input type="checkbox" id="showDrop">
             <label for="showDrop" class="mobile-item">Lifestyle in Tokyo</label>
             <ul class="drop-menu">
-              <li><a href="Lifestyle in Tokyo.html">Lifestyle in Tokyo</a></li>
+              <li><a href="lifestyle in Tokyo.html">Lifestyle in Tokyo</a></li>
               <li><a href="Fashion in Tokyo.html">Fashion in Tokyo</a></li>
             </ul>
           </li>
