--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="mega-box">
             <div class="content">
               <div class="row">
-                <img src="map.jfif" alt="">
+                <img src="images/map.jfif" alt="">
               </div>
               <div class="row">
                 <header>Cultural events </header>
