--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <div class="wrapper">
-      <div class="logo"><a href="#">City Of Japan Tokyo</a></div>
+      <div class="logo"><a href="#index">City Of Japan Tokyo</a></div>
       <input type="radio" name="slider" id="menu-btn">
       <input type="radio" name="slider" id="close-btn">
       <ul class="nav-links">
