--- a/index.html
+++ b/index.html
@@ -148,17 +148,19 @@
       </div>
       <div class="middle box">
         <div class="topic">Explore</div>
-       <p>Home</p>
-       <p>Aout</p>
-       <p>Lifestyle</p>
-       <p>Tokyo Events</p>
-       <p>Contact Us</p>
+      <ul>
+          <li><a href="#index">Home</a></li>
+          <li><a href="#history">About</a></li>
+          <li><a href="#lifestyle in tokyo">Lifestyle in Tokyo</a></li>
+          <li><a href="#tokyos events">Cultural Events</a></li>
+          <li><a href="#contacts">Contact Us</a></li>
+        </ul>
         
       </div>
       <div class="right box">
         <div class="topic">Subscribe us</div>
         <form action="#">
-          <input type="text" placeholder="Enter email address">
+          <input type="text" placeholder="kgosienngwekeletso@gmail.com">
           <input type="submit" name="" value="Send">
         
         </form>
